<resources>
    <string name="app_name">ShoppingApp</string>
    <string name="bottom_home_name">Home</string>
    <string name="category_bottom_name">Categories</string>
    <string name="favourite_bottom_name">Favourites</string>
    <string name="more_vertical_bottom_name">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_user">Hello User!</string>
    <string name="shopping_cart_name">Shopping Cart</string>
    <string name="recommended_block_name">Recommended</string>
    <string name="product_image">Product_Image</string>
    <string name="product_name">Product_Name</string>
    <string name="category">Category</string>
    <string name="reviews">Reviews</string>
    <string name="product_details_image">Product_Details_Image</string>
    <string name="reg">Reg:</string>
    <string name="details">Details</string>
    <string name="off">OFF</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">Buy now</string>
    <string name="shop">Shop</string>
    <string name="by_category">By Category</string>
    <string name="category_name">Category Name</string>
    <string name="edit_cart_list">Edit</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
    <string name="productprice">productPrice</string>
    <string name="deacrease_amount_button">deacrease_amount_button</string>
    <string name="zero">0</string>
    <string name="default_notification_channel_id">0</string>
</resources>