<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_bottom_nav"
        android:enabled="true"
        android:icon="@drawable/home_bottom_icon"
        android:title="@string/bottom_home_name"/>

    <item
        android:id="@+id/categories_bottom_nav"
        android:enabled="true"
        android:icon="@drawable/category_bottom_icon"
        android:title="@string/category_bottom_name"/>

    <item
        android:id="@+id/favourite_bottom_nav"
        android:enabled="true"
        android:icon="@drawable/favourite_bottom_icon"
        android:title="@string/favourite_bottom_name"/>

    <item
        android:id="@+id/more_bottom_nav"
        android:enabled="true"
        android:icon="@drawable/more_vertical_bottom_icon"
        android:title="@string/more_vertical_bottom_name"/>
</menu>