<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    tools:context=".view.ProductDetailsFragment">

    <TextView
        android:id="@+id/product_details_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/category_details_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_details_name"
        android:text="@string/category"
        android:textSize="38sp"
        android:textStyle="bold"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_marginTop="10dp"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_below="@+id/category_details_name"
        android:numStars="5"
        android:transformPivotX="0dp"
        android:transformPivotY="0dp" />

    <TextView
        android:id="@+id/count_reviews"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/ratingBar"
        android:layout_below="@+id/category_details_name"
        android:text="@string/reviews"/>

    <ImageView
        android:id="@+id/product_imageView"
        android:layout_width="128dp"
        android:layout_height="144dp"
        android:layout_below="@id/ratingBar"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/product_details_image"/>

    <LinearLayout
        android:id="@+id/price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/product_imageView">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1">

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginEnd="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buy_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/price_layout"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/add_to_cart_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="40dp"
                android:paddingVertical="25dp"
                android:textColor="@color/design_default_color_primary_dark"
                android:background="@drawable/transparent_button"
                android:text="@string/add_to_cart"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/buy_now_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="40dp"
                android:paddingVertical="25dp"
                android:background="@drawable/filled_button"
                android:text="@string/buy_now"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/buy_layout"
        android:layout_marginTop="35dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
    </LinearLayout>
</RelativeLayout>