<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/up_layout"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="#3F51B5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/hello_user_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="start"
            android:text="@string/hello_user"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="#3F51B5"
            android:contentDescription="@string/shopping_cart_name"
            android:scaleType="centerInside"
            android:src="@drawable/shopping_bag_icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        app:layout_constraintTop_toBottomOf="@+id/up_layout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/special_offers_recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/recommended_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommended_block_name"
            android:textSize="32sp"
            android:layout_below="@id/special_offers_recyclerView"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommended_recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/recommended_textView"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_below="@+id/recommended_textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>